# easywork

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  eslint.config.js  install.ps1  install.sh  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.scratch/deepen-five-modules/: map.md
.scratch/deepen-five-modules/issues/: 01-confirm-deepening-contract.md  02-deepen-agent-turn-ui.md  03-deepen-workbench-view-session.md  04-deepen-source-conversation-lifecycle.md  05-deepen-skill-candidate-lifecycle.md  06-deepen-provider-model-configuration.md  07-align-docs-and-validate-architecture.md
.scratch/hermes-memory-contract/: PRD.md  research.md  skill-learning-research.md
.scratch/hermes-memory-contract/issues/: 01-source-owned-extracted-facts.md  02-expand-core-memory-contract.md  03-migrate-memory-surfaces.md  04-contract-legacy-memory-layers.md  05-global-skill-candidate-review.md  (+8 more)
apps/daemon/: package.json  tsup.config.ts  tsup.sea.config.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: browser_surface.rs  lib.rs  main.rs  terminal.rs
apps/ui/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  DESIGN.md  FEATURES.md  PROGRESS.md
docs/adr/: 0001-separate-memory-from-skills.md  0002-stage-automatic-skill-learning.md  0003-unify-agent-turn-lifecycle-across-entry-surfaces.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design-web/: README.md  _head.html  _tail.html  index.html
scripts/: build-daemon-sea.mjs  check-release-artifacts.mjs  check-release-version.mjs  smoke-daemon-sea.mjs  smoke-local.mjs  smoke-vision.mjs  spike-pi.mjs  spike-session.mjs
(+109 files in other folders)
