[package]
name = "easywork-desktop"
version = "0.1.1"
description = "EasyWork 本地 AI 工作台"
edition = "2021"

[lib]
name = "easywork_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
