[package]
name = "easywork-desktop"
version = "0.4.6"
description = "EasyWork 本地 AI 工作台"
edition = "2021"

[lib]
name = "easywork_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22.1"
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.39.6"

[dev-dependencies]
sysinfo = "0.39.6"
