[package]
name = "easywork-desktop"
version = "0.4.7"
description = "EasyWork 本地 AI 工作台"
edition = "2021"

[lib]
name = "easywork_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22.1"
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.39.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSView", "NSWindow"] }

[dev-dependencies]
sysinfo = "0.39.6"
